# audio_hybrid

./: CMakeLists.txt  README.md  ahc.7z  audio_hybrid.7z  build.bat  foo_input_hybrid.fb2k-component  foo_input_sfaad.fb2k-component  foo_input_sfaad_hybrid.7z  main.cpp  test.txt  内存拷贝指令实现.txt  说明.txt  音频解码说明.txt
include/: SSE_AVX_C.h  VA_OPT.h  instruction_func.h  typeconvert.h  wav.h
msvc/: audio_hybrid.sln  audio_hybrid.vcxproj  audio_hybrid.vcxproj.filters
src/: SSE_AVX_C.cpp  instruction_func.cpp  wav.cpp
